# XTMJ

./: CMakeLists.txt  CenterDB.sql  LogicDB.sql  README.md  cleanall.sh  makeall.sh  mj_tables.sql
CenterServer/: CMakeLists.txt  CenterServer.vcxproj  CenterServer.vcxproj.filters  Config.cpp  Config.h  DUser.cpp  DUser.h  DbServer.cpp  DbServerManager.cpp  DbServerManager.h  HttpRequest.cpp  HttpRequest.h  InsideNet.cpp  InsideNet.h  Makefile.files  NewUserVerify.cpp  NewUserVerify.h  NewUserVerifyManager.cpp  NewUserVerifyManager.h  UserManager.cpp  UserManager.h  UserMessage.cpp  UserMessage.h  UserMessageMsg.h  Work.cpp  Work.h  center_config.ini  cpp.list
Client/: AI.cpp  AI.h  Card.cpp  Card.h  Client.vcxproj  Client.vcxproj.filters  Config.cpp  Config.h  InsideNet.cpp  InsideNet.h  Work.cpp  Work.h  client_config.ini  main.cpp
CoinsServer/: CMakeLists.txt  CoinsServer.vcxproj  CoinsServer.vcxproj.filters  Config.cpp  Config.h  Desk.cpp  Desk.h  DeskManager.cpp  DeskManager.h  InsideNet.cpp  InsideNet.h  Makefile.files  Robot.cpp  Robot.h  RobotManager.cpp  RobotManager.h  User.cpp  User.h  UserManager.cpp  UserManager.h  UserMessage.cpp  UserMessage.h  UserMessageMsg.cpp  UserMessageMsg.h  Work.cpp  Work.h  cpp.list
GateServer/: CMakeLists.txt  Config.cpp  Config.h  GateServer.vcxproj  GateServer.vcxproj.filters  GateUser.cpp  GateUser.h  Makefile.files  OutsideNet.cpp  OutsideNet.h  Work.cpp  Work.h  center_config.ini  cpp.list  gate_config.ini  main.cpp
LBase/: BaseCommonFunc.cpp  BaseCommonFunc.h  CMakeLists.txt  Func.cpp  Func.h  GameDefine.h  IPFilter.cpp  IPFilter.h  LActive.cpp  LActive.h  LBase.h  LBase.vcxproj  LBase.vcxproj.filters  LBuff.h  LCharge.cpp  LCharge.h  LDBSession.cpp  LDBSession.h  LIni.cpp  LLog.cpp  LLog.h  LMemeoryRecycle.cpp  LMemoryRecycle.h  LMsg.cpp  LMsg.h  LMsgS2S.h  LNet.cpp  LNet.h  LRedisClient.cpp  LRedisClient.h  LRunnable.cpp  LRunnable.h  LSingleton.h  LSocket.cpp  LSocket.h  LTabFile.cpp  LTabFile.h  LTime.cpp  LTime.h  LTool.cpp  (+12 more)
LBase/redisclient/impl/: redisparser.cpp
LogicDB/: ActiveManager.cpp  ActiveManager.h  CMakeLists.txt  Config.cpp  Config.h  DbServerManager.h  InsideNet.cpp  LogicDB.vcxproj  LogicDB.vcxproj.filters  Makefile.files  UserMessage.cpp  UserMessage.h  UserMessageMsg.cpp  UserMessageMsg.h  Work.cpp  Work.h  cpp.list
LogicManager/: AI.cpp  AI.h  ActiveManager.cpp  ActiveManager.h  CMakeLists.txt  Config.cpp  Config.h  DbServer.h  DbServerManager.cpp  DbServerManager.h  DeskManager.cpp  DeskManager.h  GonghuiManager.cpp  GonghuiManager.h  InsideNet.cpp  LogicManager.vcxproj  LogicManager.vcxproj.filters  Makefile  Makefile.files  RuntimeInfoMsg.cpp  RuntimeInfoMsg.h  User.cpp  User.h  UserManager.cpp  UserManager.h  UserMessage.cpp  UserMessage.h  UserMessageMsg.cpp  Work.cpp  Work.h  cpp.list  main.cpp
LogicServer/: ActiveManager.cpp  ActiveManager.h  CH_HN_ZhengZhou.cpp  CH_HN_ZhengZhou.h  CH_HN_ZhuanZhuan.cpp  CH_HN_ZhuanZhuan.h  CH_WH_XianTao.cpp  CH_WH_XianTao.h  CMakeLists.txt  Card.cpp  Card.h  CardBase.cpp  CardBase.h  Config.cpp  Config.h  Counter.cpp  Counter.h  CounterManager.cpp  CounterManager.h  Desk.cpp  Desk.h  GH_HeNan_ZhengZhou.cpp  GH_HeNan_ZhengZhou.h  GH_HeNan_ZhuanZhuan.cpp  GH_HeNan_ZhuanZhuan.h  GH_WuHan_XianTao.cpp  GH_WuHan_XianTao.h  GameHandler.cpp  GameHandler.h  HeNan_ZhouKou_CH.cpp  HeNan_ZhouKou_CH.h  HeNan_ZhouKou_GH.cpp  HeNan_ZhouKou_GH.h  InsideNet.cpp  InsideNet.h  LogicServer.vcxproj  LogicServer.vcxproj.filters  Makefile  Makefile.files  Robot.cpp  (+12 more)
LoginServer/: CMakeLists.txt  Config.cpp  Config.h  HttpRequest.cpp  HttpRequest.h  InsideNet.cpp  InsideNet.h  LoginServer.vcxproj  LoginServer.vcxproj.filters  Makefile.files  Work.cpp  Work.h  cpp.list  main.cpp
Robot/: Client.cpp  Client.vcxproj  Client.vcxproj.filters  ClientManager.cpp  ClientManager.h  ClientManager_Handle.cpp  ClientManager_Op.cpp  Config.cpp  Config.h  Default.cpp  Default.h  Net_Server_Inside.cpp  Net_Server_Inside.h  Public_func.cpp  Public_func.h  ThreadFunc.cpp  ThreadFunc.h  robot_config.ini  stdafx.cpp
runtime/: center_config.ini  coins_config.ini  ddz_config.ini  gate_config.ini  logic_config.ini  logic_db_config.ini  logic_manager_config.ini  loginserver_config.ini  task.csv
